--- a/config/boards/arm/adv360/adv360.dtsi
+++ b/config/boards/arm/adv360/adv360.dtsi
@@ -89,7 +89,11 @@
 };
 
 &usbd {
-    status = "okay";
+  status = "okay";
+  cdc_acm_uart: cdc_acm_uart {
+    compatible = "zephyr,cdc-acm-uart";
+    label = "CDC_ACM_0";
+  };
 };
 
 
