--- a/config/boards/arm/adv360/adv360.dtsi
+++ b/config/boards/arm/adv360/adv360.dtsi
@@ -19,6 +19,7 @@
 
     chosen {
         zephyr,code-partition = &code_partition;
+        zephyr,console = &cdc_acm_uart;
         zephyr,sram = &sram0;
         zephyr,flash = &flash0;
         zmk,kscan = &kscan0;
